# collisionAvoidance

./: CMakeLists.txt  Istruzioni_compilazione.txt  README.md  marker_pos.txt  rotation_matrix.txt  run_system_dynamic.sh
headers/: header_capsuleDinamiche.h  skeleton_zmq.h
scripts/: calibration.py  camera_stream.py  kf_tester.py  receiver.py  scatter3D_visualizer.py  sender.py  skeletonTracking.py  test_1.py  test_2.py  twoCameraStream copy.py  twoCameraStream.py  twoCameraStream_engine.py  web_interface.py
scripts/calibration/: pose_043322071223.txt  pose_044322070857.txt
scripts/old/: test_2.py  test_3.py  test_4.py
scripts/templates/: test_2.html  test_3.html  test_4.html
scripts/utils/: filters.py  kalman_filter.py  new_kalman_filter.py  orig_kalman_filter.py  simple_kalman_filter.py  skeleton_tracker.py  speed_kalman_filter.py
src/: controllo_pick_and_place_capsule_dinamiche_parallelo.cpp  examples_common.cpp  header_capsuleDinamiche.cpp
